<resources>
    <string name="app_name">Agenda de Compromissos</string>
    <string name="bt_compromisso">Compromissos</string>
    <string name="bt_agendar">agendar</string>
    <string name="bt_alterar">alterar</string>
    <string name="bt_cancelar">cancelar</string>
    <string name="bt_cancelamento">cancelar</string>
    <string name="titulo" />
    <string name="tipo_evento">Tipo do evento:</string>
    <string name="edit_tipo_evento" />
    <string name="titulo2">REPETIR:</string>
    <string name="ocorrencias">Ocorrencias:</string>
    <string name="repeticao">A cada:</string>
    <string name="opcao_de_termino">Termina:</string>
    <string name="radioButton1">Sempre</string>
    <string name="radioButton2">Após</string>
    <string name="radioButton3">Em</string>
    <string name="textView2">ocorrências</string>
    <string name="TextView2">ocorrencias</string>
    <string name="textView3" />
    <string name="bt_cadastrar">cadastrar</string>
    <string name="bt_cancela">cancelar</string>
    <string name="tipo_de_evento">tipo de evento</string>
    <string name="dados">dados</string>
    <string name="Horario_inicial"> ás </string>
    <string name="v_horario_inicial">v_horario_inicial</string>
    <string name="Descricao">Compromisso: </string>
    <string name="v_descricao">v_descricao</string>
    <string name="Tipo_do_evento">Tipo do evento:</string>
    <string name="v_tipo_do_evento">v_tipo_do_evento</string>
    <string name="participante">Participante (s):</string>
    <string name="edit_participante" />
    <string name="edit_participantes">edit_participantes</string>
    <string name="Titulo2" />
    <string name="bt_voltar">voltar</string>
    <string name="spinner2">spinner2</string>
    <string name="spinner3">spinner3</string>
    <string name="participantes">participantes</string>
    <string name="radio">radio</string>
    <string name="data_inicio">Quando: </string>
    <string name="v_data_inicio">v_data_inicio</string>
    <string name="bt_deletar">deletar</string>
    <string name="v_data_de_compromisso" />
    <string name="bt_expulgar">expulgar</string>
    <string name="data_de_inicio">Data de inicio:</string>
    <string name="data_de_fim">Data de fim:</string>
    <string name="edit_data_ini">insira a data de inicio</string>
    <string name="edit_data_fim">insira a data de fim</string>
    <string name="bt_eliminar">eliminar compromissos</string>
    <string name="title_activity_acao">Acao</string>
</resources>
